# music21-rs

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs  build_tables.rs.sh  clippy.toml  flake.nix  generate_tables.py  generate_tables.sh  rustfmt.toml  shared.rs  test.py  test.txt
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yaml  ci.yml
data/: chord_tables.toml
examples/: index.html  polyrhythmsound.rs
examples/audio/: Cargo.toml
examples/audio/src/: main.rs
examples/chord/: index.html
examples/chord-web/: Cargo.toml  index.html
examples/chord-web/src/: lib.rs
examples/polyrhythm/: index.html
examples/tuning/: index.html
examples/web/: Cargo.toml  help-tooltips.js  help-tooltips.ts  index.html  package.json  theme.css  theme.ts  tsconfig.json
examples/web/chord/: app.ts  index.html
examples/web/chords/: app.js  app.ts  index.html
examples/web/polyrhythm/: app.ts  index.html
examples/web/src/: lib.rs
examples/web/tuning/: app.ts  index.html
python-parity/: Cargo.toml
python-parity/tests/: music21_parity.rs
src/: abc.rs  analysis.rs  base.rs  chordsymbol.rs  defaults.rs  display.rs  duration.rs  error.rs  exception.rs  exceptions.rs  fraction_pow.rs  key.rs  lib.rs  main.rs  midi.rs  pitchclass.rs  polyrhythm.rs  prebase.rs  rest.rs  roman.rs  stepname.rs  stream.rs
src/chord/: chord.rs  chordbase.rs  guitar.rs  mod.rs  tables.rs  tables2.rs
src/chord/tables/: generated.rs  mod.rs
src/common/: math.rs  mod.rs  numbertools.rs  stringtools.rs  types.rs
src/common/enums/: mod.rs  offsetspecial.rs
src/common/objects/: mod.rs  slottedobjectmixin.rs
src/interval/: chromaticinterval.rs  diatonicinterval.rs  direction.rs  genericinterval.rs  intervalbase.rs  intervalstring.rs  mod.rs  specifier.rs
src/key/: keysignature.rs  mod.rs
src/note/: generalnote.rs  mod.rs  note.rs  notrest.rs
src/pitch/: accidental.rs  microtone.rs  mod.rs  pitch.rs  pitchclass.rs  pitchclassstring.rs
src/scale/: concretescale.rs  diatonicscale.rs  mod.rs
src/tuningsystem/: adaptive.rs  mod.rs
src/web/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
