[package]
authors = ["hill <hill@hilll.dev>"]
build = "build.rs"
description = "a rust port of music21 (for now just the chord naming algorithm)"
edition = "2024"
include = ["/src", "./utils/src/lib.rs", "build.rs", "/examples", "shared.rs"]
keywords = ["music", "chords", "music21"]
license-file = "LICENSE"
name = "music21-rs"
readme = "README.md"
repository = "https://github.com/float3/music21-rs"
version = "0.0.6"

[workspace]
members = ["utils"]

[features]
default = ["serde"]
python = ["dep:pyo3", "dep:reqwest", "dep:sha2"]
serde = ["dep:serde"]

[dependencies]
fraction = "0.15.4"
itertools = "0.14.0"
num = "0.4.3"
num-traits = "0.2.19"
ordered-float = "5.3.0"
regex = "1.12.3"
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[build-dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"], optional = true }
reqwest = { version = "0.13.3", features = ["blocking"], optional = true }
sha2 = { version = "0.11.0", optional = true }

[dev-dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize", "abi3-py39"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
rodio = "0.21.1"
sha2 = "0.11.0"
