[package]
authors = ["hill <hill@hilll.dev>"]
description = "Rust helpers inspired by music21 for chord, pitch, polyrhythm, and tuning analysis"
edition = "2024"
include = ["/src", "/data/chord_tables.toml", "./utils/src/lib.rs", "/examples", "shared.rs"]
keywords = ["music", "chords", "music21"]
license-file = "LICENSE"
name = "music21-rs"
readme = "README.md"
repository = "https://github.com/float3/music21-rs"
version = "0.2.1"

[workspace]
members = ["utils", "examples/audio", "examples/web", "xtask"]

[features]
default = []
regex = ["dep:regex"]
serde = ["dep:serde"]

[dependencies]
fraction = "0.15.4"
itertools = "0.14.0"
num = "0.4.3"
num-traits = "0.2.19"
ordered-float = "5.3.0"
regex = { version = "1.12.3", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
