[package]
authors = ["hill <hill@hilll.dev>"]
description = "crate for sharing code between test suite and build script"
edition = "2021"
license-file = "../LICENSE"
name = "utils"
repository = "https://github.com/float3/music21-rs"
version = "0.1.0"

[features]
default = []
python = ["dep:pyo3", "dep:reqwest", "dep:sha2"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["auto-initialize"], optional = true }
reqwest = { version = "0.12.12", features = ["blocking"], optional = true }
sha2 = { version = "0.10.8", optional = true }

[dev-dependencies]
pyo3 = { version = "0.23.4", features = ["auto-initialize"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
sha2 = { version = "0.10.8" }
