[package]
authors = ["hill <hill@hilll.dev>"]
description = "crate for sharing code between test suite and build script"
edition = "2024"
license-file = "../LICENSE"
name = "utils"
repository = "https://github.com/float3/music21-rs"
version = "0.1.0"

[features]
default = []
python = ["dep:pyo3", "dep:reqwest", "dep:sha2"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"], optional = true }
reqwest = { version = "0.13.2", features = ["blocking"], optional = true }
sha2 = { version = "0.11.0", optional = true }
