[package]
authors = ["hill <hill@hilll.dev>"]
description = "Repository maintenance tasks for music21-rs"
edition = "2024"
license-file = "../LICENSE"
name = "xtask"
publish = false
repository = "https://github.com/float3/music21-rs"
version = "0.1.0"

[features]
default = []
python = ["dep:pyo3", "dep:reqwest"]

[dependencies]
proc-macro2 = "1.0.106"
pyo3 = { version = "0.28.3", features = ["auto-initialize"], optional = true }
quote = "1.0.45"
reqwest = { version = "0.13.3", features = ["blocking"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1"
