[package]
edition = "2024"
name = "music21-rs-web"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["music21-rs/python"]
serde = ["music21-rs/serde"]

[dependencies]
music21-rs = { path = "../..", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"
