[package]
edition = "2024"
name = "music21-rs-web"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = ["music21-rs/serde"]

[dependencies]
music21-rs = { path = "../..", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.121"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int", "-Os"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O3"]
